--- a/lib/moba_web/templates/battle/_effects.html.eex
+++ b/lib/moba_web/templates/battle/_effects.html.eex
@@ -4,7 +4,7 @@
         <div class="float-right">
         <%= if @is_attacker do %>
           <%= if @hero.power != 0 do %>
-            <span data-toggle="tooltip" title="<%=power_description(@hero)%>" class="badge badge-light-pink tooltip-mobile"><i class="fa fa-galaxy mr-1"></i><%=@hero.power%></span>
+            <span data-toggle="tooltip" title="<%=power_description(@hero)%>" class="badge badge-light-pink tooltip-mobile"><i class="fa fa-galaxy mr-1"></i><%=round(@hero.power)%></span>
           <% end %>
           <%= if @hero.atk != @hero.base_atk do %>
             <span data-toggle="tooltip" title="<%=atk_description(@hero)%>" class="badge badge-light-success tooltip-mobile">
@@ -14,6 +14,9 @@
         <% else %>
           <%= if @hero.armor > 0 do %>
             <span data-toggle="tooltip" title="<%=armor_description(@hero)%>" class="badge badge-light-warning tooltip-mobile"><i class="fa fa-shield-halved mr-1"></i><%=@hero.armor%></span>
+          <% end %>
+          <%= if @hero.armor < 0 do %>
+            <span data-toggle="tooltip" title="<%=armor_description(@hero)%>" class="badge badge-light-orange tooltip-mobile"><i class="fa fa-shield-slash mr-1"></i><%=@hero.armor%></span>
           <% end %>
         <% end %>
         </div>
