--- a/lib/moba_web/templates/tavern/index.html.leex
+++ b/lib/moba_web/templates/tavern/index.html.leex
@@ -4,7 +4,7 @@
             <div class="card dark-bg mb-3 text-center p-2">
                 <h1 class="text-warning f-rpg"><i class="fab fa-ethereum mr-2"></i><%= @current_player.user.shard_count %></h1>
                 <p class="text-muted">
-                    Unlock new avatars, skills and skins to play with by using your Shards. You can acquire Shards by finishing daily quests in the Base or by matchmaking in the Arena.
+                    Unlock new avatars, skills and skins to play with by using your Shards. You can acquire Shards by ranking up in Training or by playing daily matches in the Arena.
                 </p>
             </div>
         </div>
