--- a/lib/moba_web/templates/admin/season/show.html.heex
+++ b/lib/moba_web/templates/admin/season/show.html.heex
@@ -174,6 +174,13 @@
                                 <span class="text-danger">In progress</span>
                             <% end %>
                         </td>
+                        <td>
+                            <%= if duel.auto do %>
+                                <span class="text-muted">Auto</span>
+                            <% else %>
+                                <span class="text-danger">Live</span>
+                            <% end %>
+                        </td>
                     </tr>
                 <% end %>
             </table>
